<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sipoc_ra_solver</name>
  <version>0.0.0</version>
  <description>solver for SIP-based car-seat placement</description>
  <maintainer email="rubygaoyunfan@gmail.com">Yunfan</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sipoc_ra_support</depend>
  <depend>sipoc_ra_utils</depend>
  <depend>pinocchio</depend>
  <depend>coal</depend>
  <depend>eigen</depend>
  <depend>casadi-pip</depend>
  <depend>cgal</depend>
  <depend>OpenVDB</depend>
  <depend>manif</depend>
  <depend>octomap_mapping</depend>
  <depend>octomap_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
