<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sipoc_ra_support</name>
  <version>0.0.0</version>
  <description>Sample point cloud from mesh files</description>
  <maintainer email="rubygaoyunfan@gmail.com">Yunfan</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ros_industrial_cmake_boilerplate</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>manif</depend>
  <depend>eigen</depend>
  <depend>cgal</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
