<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sipoc_ra_utils</name>
  <version>0.0.0</version>
  <description>utils for SIP-based car-seat placement</description>
  <maintainer email="rubygaoyunfan@gmail.com">gay2rng</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>eigen</depend>
  <depend>manif</depend>
  <depend>pinocchio</depend>
  <depend>nlohmann-json-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
