find_package(ament_index_cpp)

add_executable(test_capsule_nominal test_capsule_nominal_controller.cpp)
target_compile_definitions(test_capsule_nominal PRIVATE POLYGON_FLAG_VALUE=0)
target_include_directories(test_capsule_nominal PRIVATE "${ACADOS_INCLUDE_DIR}/")
target_include_directories(test_capsule_nominal PRIVATE "${ACADOS_INCLUDE_DIR}/hpipm/include/")
target_include_directories(test_capsule_nominal PRIVATE "${ACADOS_INCLUDE_DIR}/blasfeo/include/")
target_link_libraries(test_capsule_nominal capsule_nominal_controller)
ament_target_dependencies(test_capsule_nominal ament_index_cpp)

add_executable(test_dilated_polygon_nominal test_dilated_polygon_nominal_controller.cpp)
target_compile_definitions(test_dilated_polygon_nominal PRIVATE POLYGON_FLAG_VALUE=1)
target_include_directories(test_dilated_polygon_nominal PRIVATE "${ACADOS_INCLUDE_DIR}/")
target_include_directories(test_dilated_polygon_nominal PRIVATE "${ACADOS_INCLUDE_DIR}/hpipm/include/")
target_include_directories(test_dilated_polygon_nominal PRIVATE "${ACADOS_INCLUDE_DIR}/blasfeo/include/")
target_link_libraries(test_dilated_polygon_nominal dilated_polygon_nominal_controller)
ament_target_dependencies(test_dilated_polygon_nominal ament_index_cpp)

add_executable(test_dilated_polygon_robust test_dilated_polygon_robust_controller.cpp)
target_compile_definitions(test_dilated_polygon_robust PRIVATE POLYGON_FLAG_VALUE=1)
target_include_directories(test_dilated_polygon_robust PRIVATE "${ACADOS_INCLUDE_DIR}/")
target_include_directories(test_dilated_polygon_robust PRIVATE "${ACADOS_INCLUDE_DIR}/hpipm/include/")
target_include_directories(test_dilated_polygon_robust PRIVATE "${ACADOS_INCLUDE_DIR}/blasfeo/include/")
target_link_libraries(test_dilated_polygon_robust dilated_polygon_robust_controller)
ament_target_dependencies(test_dilated_polygon_robust ament_index_cpp)